# stock-analysis

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  run.py
backend/assets/: stocks.csv
backend/config/: sectors.yaml  weights.yaml
backend/src/: config.py  schemas.py
backend/src/api/: main.py  report.py
backend/src/data/: cache.py  kis_client.py  llm.py  master.py  news.py  resample.py
backend/src/db/: cache_db.py
backend/src/indicators/: __init__.py  core.py
backend/src/macro/: sectors.py
backend/src/scoring/: score.py
backend/src/signals/: advanced.py  evaluate.py
backend/tests/: test_advanced.py  test_indicators.py  test_news.py  test_resample.py  test_scoring.py  test_signals.py
design/: README.md  StockAnalysis.dc.html
docs/: architecture.md  supabase.sql
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/[ticker]/: loading.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/screener/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/watchlist/: page.tsx
frontend/src/components/: AISummary.tsx  CandleChart.tsx  Disclaimer.tsx  MAStatusGrid.tsx  NewsGrid.tsx  ProbabilityGauge.tsx  ReasonPanel.tsx  SignalCards.tsx  StockHeader.tsx  StockSearch.tsx  StructurePanel.tsx  SummaryCard.tsx  TopBar.tsx  WatchStar.tsx
frontend/src/lib/: api.ts  format.ts  mock.ts  supabase.ts  types.ts  watchlist.ts
